cambiando nombre de archivos

--- a/productos.html
+++ b/productos.html
@@ -21,7 +21,7 @@
                 <div class="row mt-4">
                     <div class="col-md-6">
                         <div class="card mb-4">
-                            <img src="img/pexels-suzy-hazelwood-1458097.jpg" class="card-img-top img-fluid" alt="Producto extra 1">
+                            <img src="img/taza5.jpg" class="card-img-top img-fluid" alt="Producto extra 1">
                             <div class="card-body">
                                 <h5 class="card-title">Producto 1</h5>
                                 <p class="card-text">Descripción del producto extra 1.</p>
@@ -31,7 +31,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card mb-4">
-                            <img src="img/pexels-valeriia-miller-3020919.jpg" class="card-img-top img-fluid" alt="Producto extra 2">
+                            <img src="img/taza4.jpg" class="card-img-top img-fluid" alt="Producto extra 2">
                             <div class="card-body">
                                 <h5 class="card-title">Producto 2</h5>
                                 <p class="card-text">Descripción del producto extra 2.</p>
