--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row mt-2">
             <div class="col-md-6">
                 <div class="card mb-4">
-                    <img src="img/pexels-gül-işık-2194391.jpg" class="card-img-top img-fluid" alt="Producto 1">
+                    <img src="img/taza.jpg" class="card-img-top img-fluid" alt="Producto 1">
                     <div class="card-body">
                         <h5 class="card-title">Producto X</h5>
                         <p class="card-text">Descripción del producto X.</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-md-6">
                 <div class="card mb-4">
-                    <img src="img/pexels-jessica-lewis-593332.jpg" class="card-img-top img-fluid" alt="Producto 2">
+                    <img src="img/taza1.jpg" class="card-img-top img-fluid" alt="Producto 2">
                     <div class="card-body">
                         <h5 class="card-title">Producto Y</h5>
                         <p class="card-text">Descripción del producto Y.</p>
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card mb-4">
-                    <img src="img/pexels-kristina-paukshtite-712880.jpg" class="card-img-top img-fluid"
+                    <img src="img/taza1.jpg" class="card-img-top img-fluid"
                         alt="Producto 3">
                     <div class="card-body">
                         <h5 class="card-title">Producto Z</h5>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-6">
                 <div class="card mb-4">
-                    <img src="img/pexels-pixabay-50676.jpg" class="card-img-top img-fluid" alt="Producto 4">
+                    <img src="img/taza2.jpg" class="card-img-top img-fluid" alt="Producto 4">
                     <div class="card-body">
                         <h5 class="card-title">Producto W</h5>
                         <p class="card-text">Descripción del producto W.</p>
@@ -192,7 +192,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
